--- a/popup/popup-style.css
+++ b/popup/popup-style.css
@@ -1,50 +1,112 @@
-*{
-	margin:0;
-	padding:0;
-	border:0;
-	font-family: Arial, Helvetica, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-p{
-	padding:4px 14px;
+p {
+  padding: 4px 14px;
 }
-#balance{
-	background-color:#f0f0f0;
-	border-top:1px solid #e0e0e0;
-	padding:8px 16px;
-	font-size:12px;
-	font-weight: bold;
-	color:#666;
-	margin-top:10px;
+
+body {
   text-align: center;
 }
-
-#toggle{
-	display:block;
-	margin:0 auto;
-	margin-bottom:15px;
-	margin-top:5px;
+table#table {
+  margin-left: auto;
+  margin-right: auto;
 }
 
-#status{
-	color:#feba00;
-	font-weight: bold;
-	text-align: center;
-	padding-bottom:0;
-	padding-top:10px;
-	font-size:11px;
-  transition: all .1s ease;
-}
-
-#rolls{
+#countdown {
+  background-color: #883333;
+  border-top: 1px solid #000333;
+  padding: 8px 16px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #666;
+  margin-top: 10px;
   text-align: center;
+  display: block;
 }
 
-#container{
+#toggle {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  margin-top: 5px;
+}
+
+#status {
+  color: #883333;
+  font-weight: bold;
+  text-align: center;
+  padding-bottom: 0;
+  padding-top: 10px;
+  font-size: 11px;
+  transition: all 0.1s ease;
+}
+
+
+#container {
+  background-color: #333;
   min-width: 150px;
+  display: block;
 }
 
+#table {
+  align-content: center;
+  align-items: center;
+  align-self: center;
+}
 
- /* The switch - the box around the slider */
+#btcbal {
+  background-color: #883333;
+  border-top: 1px solid #000333;
+  padding: 8px 16px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #666;
+  margin-top: 10px;
+  text-align: center;
+  display:  block;
+}
+
+#rpbal {
+  background-color: #883333;
+  border-top: 1px solid #000333;
+  padding: 8px 16px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #666;
+  margin-top: 10px;
+  text-align: center;
+  display:  block; 
+}
+
+#btcclaimed {
+  background-color: #883333;
+  border-top: 1px solid #000333;
+  padding: 8px 16px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #666;
+  margin-top: 10px;
+  text-align: center;
+  display:  block;
+  
+}
+#rpclaimed {
+  background-color: #883333;
+  border-top: 1px solid #000333;;
+  padding: 8px 16px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #666;
+  margin-top: 10px;
+  text-align: center;
+  display: block;    
+}
+
+/* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
@@ -53,7 +115,9 @@ p{
 }
 
 /* Hide default HTML checkbox */
-.switch input {display:none;}
+.switch input {
+  display: none;
+}
 
 /* The slider */
 .slider {
@@ -64,8 +128,8 @@ p{
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .1s;
-  transition: .1s;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
 }
 
 .slider:before {
@@ -76,16 +140,16 @@ p{
   left: 4px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: .1s;
-  transition: .1s;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
 }
 
 input:checked + .slider {
-  background-color: #feba00;
+  background-color: #883333;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #feba00;
+  box-shadow: 0 0 1px #883333;
 }
 
 input:checked + .slider:before {
@@ -101,4 +165,4 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
-} 
+}
