--- a/popup/popup-style.css
+++ b/popup/popup-style.css
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  background-color:#333;
   padding: 0;
   border: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -48,8 +49,12 @@ table#table {
 
 #container {
   background-color: #333;
-  min-width: 150px;
+  min-width: 320px;
   display: block;
+  text-align: center;
+  align-items: center;
+  align-self: center;
+  align-content: center;
 }
 
 #table {
