--- a/popup/popup-style.css
+++ b/popup/popup-style.css
@@ -5,19 +5,63 @@
   border: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-p {
-  padding: 4px 14px;
-}
 
-body {
+:link{font-style:none ;}
+
+body, html {
   text-align: center;
+  min-width:320px;
 }
-table#table {
+table.table {
   margin-left: auto;
   margin-right: auto;
 }
+.tabs, .tab{
+  display:inline-block;
+  margin-left:auto;margin-right: auto;
+}
+span{
+  background-color:#883333;
+  vertical-align: middle;
 
-#countdown {
+  height:30px;
+  display:inline-block;
+}
+.tab{
+  padding:10px,5px;
+  text-align: center;
+  vertical-align: middle;
+  padding-top:10px;
+  width:25%;
+  height:35px;
+  background-color:#333;
+  color:#666;
+}.tab.active, .tab:active {
+  background-color:#444;
+  color:#aaa
+}
+.tab:hover{
+  background-color:#555;
+  color:#fff;
+}
+.tabs:link, .tab:link, .tabs:visited, .tab:visited, .tabs:focus, .tab:focus, .tabs:any-link, .tab:any-link{
+  color:#666;
+}
+#countdown{ background-color: #883333;
+  border-top: 1px solid #000333;
+  padding: 8px 16px;
+  font-size: 12px;
+  margin-left:auto;margin-right:auto;
+  width:90%;
+  font-weight: bold;
+  color: #666;
+  margin-top: 10px;
+  align-items: center;
+  align-self: center;
+  align-content: center;
+  text-align: center;
+  display: block;
+} .tabs{
   background-color: #883333;
   border-top: 1px solid #000333;
   padding: 8px 16px;
@@ -25,14 +69,24 @@ table#table {
   font-weight: bold;
   color: #666;
   margin-top: 10px;
+  margin-left:auto;margin-right:auto;
   text-align: center;
   display: block;
 }
-
+.tab-content{
+  display:none;
+  text-align:center;
+}
+.tab-content.active{
+ display:block;
+}
 #toggle {
   display: block;
-  margin: 0 auto;
+  margin: auto;
   margin-bottom: 15px;
+  text-align: center;
+  align-self:center;align-content: center;align-items: center;
+  background-color:#333;
   margin-top: 5px;
 }
 
@@ -44,130 +98,179 @@ table#table {
   padding-top: 10px;
   font-size: 11px;
   transition: all 0.1s ease;
+  margin:auto;
+  align-items: center;align-content: center;align-self: center;
 }
-
 
 #container {
   background-color: #333;
-  min-width: 320px;
+  min-height:300px;
   display: block;
   text-align: center;
   align-items: center;
   align-self: center;
   align-content: center;
+  min-width: 320px;
+  overflow:hidden;
+
+}
+.tab-content{
+  background-color: #333;
+  text-align: center;
+  align-items: center;
+  align-self: center;
+  align-content: center;
+  width:100%;
+  min-width:320px;
+  height:100%;
 }
 
-#table {
+.table {
   align-content: center;
   align-items: center;
   align-self: center;
+  margin:auto;
+  margin-bottom:15px;
+  padding-bottom:5px;
 }
 
 #btcbal {
   background-color: #883333;
-  border-top: 1px solid #000333;
-  padding: 8px 16px;
-  font-size: 12px;
-  font-weight: bold;
-  color: #666;
-  margin-top: 10px;
-  text-align: center;
+
   display:  block;
 }
 
 #rpbal {
   background-color: #883333;
+
+  display:  block; 
+}
+tr{
+  padding:10px;
+  margin:10px;
+}
+td{
+  background-color: #883333;
   border-top: 1px solid #000333;
-  padding: 8px 16px;
+  padding: 35px 56px;
   font-size: 12px;
   font-weight: bold;
   color: #666;
   margin-top: 10px;
   text-align: center;
-  display:  block; 
 }
 
 #btcclaimed {
   background-color: #883333;
-  border-top: 1px solid #000333;
-  padding: 8px 16px;
-  font-size: 12px;
-  font-weight: bold;
-  color: #666;
-  margin-top: 10px;
-  text-align: center;
+
   display:  block;
   
 }
+td{
+  padding:10px;
+}
 #rpclaimed {
   background-color: #883333;
-  border-top: 1px solid #000333;;
-  padding: 8px 16px;
-  font-size: 12px;
-  font-weight: bold;
-  color: #666;
-  margin-top: 10px;
-  text-align: center;
+
   display: block;    
+}.checkbox-container input, .checkbox-container div, .checkbox-container label {
+  text-align:right;
+  align-items:end;
+  align-self:end;
+  align-content: end;
+  margin-left:10px;
+  padding:10px;
 }
-
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 48px;
-  height: 28px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  display: none;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.1s;
-  transition: 0.1s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 20px;
-  width: 20px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.1s;
-  transition: 0.1s;
-}
-
-input:checked + .slider {
+.checkbox-container {
+	display: inline-block;
+	position: relative;
+  margin:auto;
   background-color: #883333;
+  height:30px;
+  text-align: right;
+  align-content:end;
+  align-items: end;
+  align-self:end;
+  right:0;
 }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #883333;
+.checkbox-container label {
+	background-color: #ccc;
+	border: 1px solid #fff;
+	border-radius: 20px;
+	display: inline-block;
+	position: relative;
+	width: 45px;
+	height: 25px;
+	z-index: 2;
+  text-align: right;
+  align-content:end;
+  align-items: end;
+  align-self:end;
+  right:0;
+}
+#status_container{ background-color:#333;
+  text-align:center;
+  margin:auto;
 }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(20px);
-  -ms-transform: translateX(20px);
-  transform: translateX(20px);
+.checkbox-container label::after {
+	content: ' ';
+	background-color: #fff;
+	border-radius: 50%;
+	position: absolute;
+	top: 1.5px;
+	left: 1px;
+	transform: translateX(0);
+	transition: transform 0.3s linear;
+	width: 20px;
+	height: 20px;
+	z-index: 3;
+}
+input{
+  padding:5px;
+}
+.checkbox-container input {
+	visibility: hidden;
+	position: absolute;
+	z-index: 2;
 }
 
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
+
+.checkbox-container input:checked + label::after {
+	transform: translateX(calc(100% + 0.5px));
 }
 
-.slider.round:before {
-  border-radius: 50%;
+.active-circle {
+	border-radius: 50%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(calc(-50% - 10px), calc(-50% - 2px)) scale(0);
+	transition: transform 0.6s ease-out;
+	width: 30px;
+	height: 30px;
+	z-index: 1;
+  
+}
+
+.checkbox-container .active-circle,
+.checkbox-container input:checked + label {
+	background-color: #883333;
+}
+
+
+input number {width:20px;}
+/* The slider */
+
+#delayvalue{
+  width:50px;
+}
+
+label{
+  background-color: #883333;
+  margin:auto;
+  padding:5px;
+
+
 }
